[package]
name = "svctracker"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", features = ["blocking", "rustls-tls"] }
tokio = { version = "1.38.0", features = ["full"] }
chrono = { version = "0.4.38" }
time = { version = "0.3.11", features = ["formatting"] }
futures = { version = "0.3.30", features = ["thread-pool"] }
